--- a/Sample/app/build.gradle
+++ b/Sample/app/build.gradle
@@ -25,6 +25,7 @@ android {
         flatDir dirs: '../../../modules/androidsdk/build/outputs/aar'
         // superproject path where all required AARs are stored (for local debug builds only)
         flatDir dirs: '../../../MastodonAndroid/prebuilt-aar'
+        maven { url 'https://google.bintray.com/tensorflow' }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -57,5 +58,66 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
     implementation 'com.google.android.gms:play-services:7.8+'
+
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.2.0'
+
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72'
+    implementation 'androidx.multidex:multidex:2.0.1'
+
+    // Barcode model
+    implementation 'com.google.mlkit:barcode-scanning:16.0.2'
+
+    // Object detection feature with bundled default classifier
+    implementation 'com.google.mlkit:object-detection:16.2.0'
+
+    // Object detection feature with custom classifier support
+    implementation 'com.google.mlkit:object-detection-custom:16.2.0'
+
+    // Face features
+    implementation 'com.google.mlkit:face-detection:16.0.1'
+
+    // Text features
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:16.1.0'
+
+    // Image labeling with automl model support
+    implementation 'com.google.mlkit:image-labeling-automl:16.2.0'
+
+    // Image labeling
+    implementation 'com.google.mlkit:image-labeling:16.2.0'
+
+    // Image labeling custom
+    implementation 'com.google.mlkit:image-labeling-custom:16.2.0'
+
+    // -------------------------------------------------------
+
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.guava:guava:17.0'
+
+    // For how to setup gradle dependencies in Android X, see:
+    // https://developer.android.com/training/testing/set-up-project#gradle-dependencies
+    // Core library
+    androidTestImplementation 'androidx.test:core:1.2.0'
+
+    // AndroidJUnitRunner and JUnit Rules
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+
+    // Assertions
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+
+    // ViewModel and LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
+
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    // CameraX
+    implementation "androidx.camera:camera-camera2:1.0.0-beta07"
+    implementation "androidx.camera:camera-lifecycle:1.0.0-beta07"
+    implementation "androidx.camera:camera-view:1.0.0-alpha14"
+
+    implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
 
 }
